# biokb_obo

./: .gitignore  README.md  pyproject.toml  tox.ini
notebooks/: test.ipynb  test_workflow.ipynb
src/biokb_obo/: __init__.py  cli.py  constants.py
src/biokb_obo/db/: manager.py  models.py
