[project]
name = "biokb-obo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christian Ebeling", email = "Christian.Ebeling@scai.fraunhofer.de" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "owlready2>=0.49",
    "pandas>=3.0.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License"
]
keywords = ["knowledge graph", "knowledge base", "ontology", "bioinformatics", "DOID"]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
